--- a/client/package.json
+++ b/client/package.json
@@ -2,15 +2,20 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@mdi/font": "^7.1.96",
     "@vue/cli-service": "~5.0.0"
   }
 }
