--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Tristan Greffe <tristan.greffe@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.3",
