--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
   "author": "Tristan Greffe <tristan.greffe@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
